--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.22.0",
     "bootstrap": "^5.1.3",
     "holderjs": "^2.9.9",
+    "package.json": "^2.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
     "react-bootstrap-sweetalert": "^5.2.0",
@@ -17,6 +18,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-slideshow-image": "^3.5.1",
+    "sweetalert": "^2.1.2",
     "tailwindcss": "1.0.4",
     "typeface-roboto": "^1.1.13",
     "web-vitals": "^1.0.1"
