--- a/package.json
+++ b/package.json
@@ -10,13 +10,9 @@
     "axios": "^0.22.0",
     "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
-    "craco": "^0.0.3",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
     "holderjs": "^2.9.9",
     "mysql": "^2.18.1",
-    "mysql2": "^2.3.2",
-    "nodemon": "^2.0.13",
+    "mysql2": "^2.3.3-rc.0",
     "package.json": "^2.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
@@ -29,9 +25,7 @@
     "sweetalert": "^2.1.2",
     "tailwindcss": "1.0.4",
     "typeface-roboto": "^1.1.13",
-    "web-vitals": "^1.0.1",
-    "webpack": "^4.42.0",
-    "webpack-dev-server": "^3.1.9"
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "craco start",
@@ -61,17 +55,5 @@
     "autoprefixer": "^9.8.7",
     "postcss": "^7.0.38",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.16"
-  },
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-  "main": "craco.config.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/MsrdMai/Tracking-Melon.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/MsrdMai/Tracking-Melon/issues"
-  },
-  "homepage": "https://github.com/MsrdMai/Tracking-Melon#readme"
+  }
 }
