--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.3.0",
+    "@react-icons/all-files": "^4.1.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -11,6 +12,7 @@
     "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "holderjs": "^2.9.9",
+    "mdbreact": "^5.1.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3-rc.0",
     "package.json": "^2.0.1",
@@ -18,14 +20,16 @@
     "react-bootstrap": "^2.0.0-rc.0",
     "react-bootstrap-sweetalert": "^5.2.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-slideshow-image": "^3.5.1",
     "sequelize": "^6.9.0",
     "sweetalert": "^2.1.2",
-    "tailwindcss": "1.0.4",
+    "tailwind": "^4.0.0",
     "typeface-roboto": "^1.1.13",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "webpack": "^4.46.0"
   },
   "scripts": {
     "start": "craco start",
@@ -54,6 +58,6 @@
   "devDependencies": {
     "autoprefixer": "^9.8.7",
     "postcss": "^7.0.38",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.16"
+    "tailwindcss": "^1.0.4"
   }
 }
